crates/wdl-analysis/tests/validation/runtime-duplicate-keys/source.errors
error: duplicate key `foo` in runtime section
   ┌─ tests/validation/runtime-duplicate-keys/source.wdl:13:9
   │
 9 │         foo: "first"
   │         --- first key with this name is here
   ·
13 │         foo: "dup"
   │         ^^^ this key is a duplicate

error: duplicate key `bar` in runtime section
   ┌─ tests/validation/runtime-duplicate-keys/source.wdl:14:9
   │
10 │         bar: "first"
   │         --- first key with this name is here
   ·
14 │         bar: "dup"
   │         ^^^ this key is a duplicate

error: duplicate key `foo` in runtime section
   ┌─ tests/validation/runtime-duplicate-keys/source.wdl:15:9
   │
 9 │         foo: "first"
   │         --- first key with this name is here
   ·
15 │         foo: "dup"
   │         ^^^ this key is a duplicate

error: conflicting key `container` in runtime section
   ┌─ tests/validation/runtime-duplicate-keys/source.wdl:25:9
   │
24 │         docker: "foo"
   │         ------ the conflicting alias is here
25 │         container: "bar"
   │         ^^^^^^^^^ this key conflicts with an alias

